# pacz

./: Aquarium.html  Sudoku.html
program liczący/: CalcFile.py  Projects.py  main.py  out.html
projekty/Aquarium/: CMakeLists.txt
projekty/Aquarium/program/: CMakeLists.txt
projekty/Sudoku/: log.0.0.txt  logging.properties  pom.xml
projekty/Sudoku/Model/: pom.xml
projekty/Sudoku/Model/src/main/java/: module-info.java
projekty/Sudoku/Model/src/main/java/com/ad/sudoku/model/: SudokuBoard.java  SudokuGroup.java  SudokuRow.java
projekty/Sudoku/Model/src/main/java/com/ad/sudoku/model/actionevents/: SudokuActionEvent.java
projekty/Sudoku/Model/src/main/java/com/ad/sudoku/model/dao/: Dao.java  JpaSudokuBoardDao.java  SudokuBoardDaoFactory.java
projekty/Sudoku/Model/src/main/java/com/ad/sudoku/model/exceptions/: SudokuArrayIndexOutOfBoundsException.java  SudokuException.java  SudokuFieldException.java  SudokuNullPointerException.java
projekty/Sudoku/Model/src/main/java/com/ad/sudoku/model/solvers/: SudokuSolver.java
projekty/Sudoku/Model/src/main/resources/com/ad/sudoku/model/lang/: SudokuExceptionLocale.properties  SudokuExceptionLocale_en.properties  sudokuDifficultyLocale.properties
projekty/Sudoku/Model/src/test/java/: BacktrackingSudokuSolverTest.java  DifficultyTest.java  SudokuBoardDaoFactoryTest.java  SudokuBoardTest.java  SudokuFieldTest.java  SudokuGroupTest.java
projekty/Sudoku/View/: pom.xml
projekty/Sudoku/View/src/main/java/: module-info.java
projekty/Sudoku/View/src/main/java/com/ad/sudoku/view/: TextFieldBackgroundColor.java
projekty_MODDED/Aquarium/program/src/: main.cpp
projekty_MODDED/Sudoku/Model/src/main/java/com/ad/sudoku/model/: Difficulty.java  Main.java  SudokuBox.java  SudokuColumn.java  SudokuField.java
projekty_MODDED/Sudoku/Model/src/main/java/com/ad/sudoku/model/dao/: FileSudokuBoardDao.java  FileSudokuBoardListDao.java
projekty_MODDED/Sudoku/Model/src/main/java/com/ad/sudoku/model/exceptions/: SudokuClassNotFoundException.java  SudokuIOexception.java  SudokuSQlException.java
projekty_MODDED/Sudoku/Model/src/main/java/com/ad/sudoku/model/solvers/: BacktrackingSudokuSolver.java
projekty_MODDED/Sudoku/Model/src/main/resources/com/ad/sudoku/model/lang/: sudokuLoggerLocale_pl.properties
projekty_MODDED/Sudoku/View/src/main/java/com/ad/sudoku/view/: Main.java  Window.java
projekty_MODDED/Sudoku/View/src/main/java/com/ad/sudoku/view/sounds/: SoundsBundle.java  SoundsBundle_en.java  SoundsBundle_ja.java  SoundsBundle_pl.java
projekty_MODDED/Sudoku/View/src/main/resources/: Window.fxml
projekty_MODDED/Sudoku/View/src/main/resources/com/ad/sudoku/view/lang/: sudokuLocale.properties  sudokuLocale_ja.properties
raport/: Raport.docx
